--- a/sphinx-simplepdf/Dockerfile
+++ b/sphinx-simplepdf/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:24.04
-MAINTAINER Vladimir Müller "code@vladmueller.de"
+LABEL maintainer="Vladimir Müller <code@vladmueller.de>"
 
 ENV TZ=Europe/Berlin
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
