--- a/sphinx-simplepdf/Dockerfile
+++ b/sphinx-simplepdf/Dockerfile
@@ -4,16 +4,17 @@ LABEL maintainer="Vladimir Müller <code@vladmueller.de>"
 ENV TZ=Europe/Berlin
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt-get update \
-    && apt-get upgrade -y \
-    && apt-get install -y build-essential python3-pip python3-venv \
-    && apt-get install -y weasyprint
+    && apt-get upgrade -y --no-install-recommends \
+    && apt-get install -y --no-install-recommends build-essential python3-pip python3-venv weasyprint \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 ADD requirements.txt /
 
 RUN python3 -m venv /venv
 
 RUN /venv/bin/pip install --upgrade pip \
-    && /venv/bin/pip install -r requirements.txt
+    && /venv/bin/pip install --no-cache-dir -r requirements.txt
 
 WORKDIR /workdir
 
