--- a/sphinx-simplepdf/Dockerfile
+++ b/sphinx-simplepdf/Dockerfile
@@ -5,7 +5,7 @@ ENV TZ=Europe/Berlin
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt-get update \
     && apt-get upgrade -y --no-install-recommends \
-    && apt-get install -y --no-install-recommends build-essential python3-pip python3-venv weasyprint \
+    && apt-get install -y --no-install-recommends make python3-pip python3-venv weasyprint \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
